@@ -39,17 +39,21 @@ android {
         dataBinding = true
     }
 
+    /*tasks.named<Test>("test") {
+        useJUnitPlatform()
+    }*/
+
     tasks.withType(Test) {
         useJUnitPlatform()
-    //    jvmArgs '--enable-preview'
     }
-    tasks.withType(Test) {
+
+    /*tasks.withType(Test) {
         testLogging {
             exceptionFormat "full"
             events "started", "skipped", "passed", "failed"
             showStandardStreams true
         }
-    }
+    }*/
 
 }
 
@@ -72,12 +76,16 @@ dependencies {
 
     //MockK
     testImplementation "io.mockk:mockk:1.9.3.kotlin12"
-    testImplementation "org.mockito:mockito-core:3.4.6"
+    testImplementation "org.mockito:mockito-core:3.7.7"
+    testImplementation "org.mockito:mockito-junit-jupiter:3.7.7"
+    testImplementation "org.mockito:mockito-inline:3.7.7"
 
     androidTestImplementation 'androidx.test:rules:1.4.0'
     androidTestImplementation 'androidx.test:runner:1.4.0'
     androidTestImplementation 'androidx.test:core-ktx:1.4.0'
     androidTestImplementation 'androidx.test.ext:junit-ktx:1.1.3'
+
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.0'
 
     testImplementation "org.junit.platform:junit-platform-suite:1.8.0"
     testImplementation "org.junit.jupiter:junit-jupiter-api:5.8.0"
